Update README.md
added some text to help with null pointer exception